--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.8",
-    "node": "^12.6.0"
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "node": "^12.6.0",
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {},
   "description": ""
