--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "angular": "^1.7.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "knex": "^0.19.1",
     "node": "^12.6.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "npm": "^6.10.3",
+    "pg": "^7.12.1"
   },
   "devDependencies": {},
   "description": ""
