--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "angular": "^1.7.8",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "knex": "^0.19.1",
-    "node": "^12.6.0",
+    "knex": "^0.19.2",
+    "node": "^12.8.1",
     "nodemon": "^1.19.1",
     "npm": "^6.10.3",
-    "pg": "^7.12.1"
+    "pg": "^7.12.1",
+    "psql": "0.0.1"
   },
   "devDependencies": {},
   "description": ""
